--- a/estilos.css
+++ b/estilos.css
@@ -14,7 +14,7 @@
 		position: fixed;
 		width: 100%;
 		height: 100vh;
-		background: rgba(0,0,0,0.6);
+		background: rgba(126, 121, 121, 0.6);
 		z-index: -1;
 		top: 0;left: 0;
 	}
@@ -24,21 +24,26 @@
 		height: 100px;
 		position: fixed;
 		top: 0;left: 0;
-		color: 1c1c1b;
+		background-color: #1c1c1b;
 	}
 	.container{
 		width: 90%;
 		max-width: 1200px;
 		margin: auto;
 	}
-	.container .btn-menu, .logo{
-		float: left;
+	.container .btn-menu{
+		float: right;
 		line-height:100px;
+	}
+	.logo{
+		float: left;
+		margin-top: 3%;
 	}
 	.container .btn-menu label{
 		color: #fff;
 		font-size: 25px;
 		cursor: pointer;
+		margin-left: 10px;
 	}
 	.logo h1{
 		color: #fff;
@@ -76,7 +81,7 @@
 		background: rgba(0,0,0,0.5);
 		width: 100%;
 		height: 100vh;
-		top: 0;left: 0;
+		top: 0;right: 0;
 		transition: all 500ms ease;
 		opacity: 0;
 		visibility: hidden;
@@ -92,10 +97,10 @@
 		height: 100vh;
 		position: relative;
 		transition: all 500ms ease;
-		transform: translateX(-100%);
+		transform: translateX(100%);
 	}
 	#btn-menu:checked ~ .container-menu .cont-menu{
-		transform: translateX(0%);
+		transform: translateX(446%);
 	}
 	.cont-menu nav{
 		transform: translateY(15%);
@@ -114,10 +119,30 @@
 	}
 	.cont-menu label{
 		position: absolute;
-		right: 5px;
+		left: 5px;
 		top: 10px;
 		color: #fff;
 		cursor: pointer;
 		font-size: 18px;
 	}
 	/*Fin de Menù lateral*/
+#titulo{
+	color: white;
+	text-align: center;
+}
+
+#parrafo{
+	color: white;
+}
+
+#contenido{
+	margin-top: 10%;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+#imgp{
+	margin-left: 25%;
+	margin-right: 25%;
+	width: 50%;
+	height: 50%;
+}
